syntax = "proto3";

package pb;

import "reservation_all.proto";

option go_package = "github.com/tijanadmi/bookings_backend/pb";

message ListReservationsAfterDateRequest {
    string start_date =1;
	string end_date =2;
}

message ListReservationsAfterDateResponse {
    repeated ReservationAll reservations = 1; // Lista reservacija
}